# nuclei

./: .gitignore  .gitmodules  .travis.yml  AbstractDataSource.cpp  AbstractDataSource.h  ActiveGraphicsItemGroup.h  CMakeLists.txt  ClickableItem.cpp  ClickableItem.h  DataSource.h  Decay.cpp  Decay.h  DecayCascadeFilterProxyModel.h  DecayCascadeItemModel.cpp  DecayCascadeItemModel.h  ENSDF.cpp  ENSDF.h  ENSDFDataSource.cpp  ENSDFDataSource.h  ENSDFDownloader.cpp  ENSDFDownloader.h  ENSDFDownloader.ui  ENSDFDownloaderSettings.ui  ENSDFMassChain.cpp  ENSDFMassChain.h  ENSDFParser.cpp  ENSDFParser.h  ENSDFTreeItem.h  Energy.cpp  Energy.h  EnergyLevel.cpp  EnergyLevel.h  GammaTransition.cpp  GammaTransition.h  GraphicsDropShadowEffect.h  GraphicsHighlightItem.h  HalfLife.cpp  HalfLife.h  HalfLifeSpinBox.cpp  HalfLifeSpinBox.h  (+67 more)
.circleci/: config.yml
1.1/: Decay.cpp  Decay.h  ENSDFDownloader.cpp  ENSDFDownloader.h  ENSDFDownloader.ui  EnergyLevel.cpp  EnergyLevel.h  GammaTransition.cpp  GammaTransition.h  Kaihen.cpp  Kaihen.h  Kaihen.ui  Nuclide.cpp  Nuclide.h  SpinParity.cpp  kaihen.pro  kaihen.qrc  qxtgroupbox.cpp  qxtgroupbox.h  version.h
Application Data/: nuclei_ensdf.cache
NucData/: DataQuality.cpp  DataQuality.h  DecayMode.cpp  DecayMode.h  DecayScheme.cpp  DecayScheme.h  ENSDFParser.cpp  ENSDFParser.h  Energy.cpp  Energy.h  HalfLife.cpp  HalfLife.h  InfoData.cpp  InfoData.h  Level.cpp  Level.h  Moment.cpp  Moment.h  Nuclide.cpp  Nuclide.h  NuclideId.cpp  NuclideId.h  Parity.cpp  Parity.h  Spin.cpp  Spin.h  SpinParity.cpp  SpinParity.h  Transition.cpp  Transition.h  UncertainDouble.cpp  UncertainDouble.h  nid.cpp  nid.h
SchemePlayer/: ActiveGraphicsItemGroup.cpp  ActiveGraphicsItemGroup.h  ClickableItem.cpp  ClickableItem.h  LevelItem.cpp  LevelItem.h  NuclideItem.cpp  NuclideItem.h  SchemePlayer.cpp  SchemePlayer.h  TransitionItem.cpp  TransitionItem.h
cmake/: BoostLibraryConfig.cmake  BuildInfo.cmake  CompilerConfig.cmake  ConanConfig.cmake  ConanSetup.cmake  EnsureBuildType.cmake  QtLibraryConfig.cmake
ensdf/: ENSDFParser.cpp  ENSDFParser.h  ensdf_records.cpp  ensdf_records.h  ensdf_types.cpp  ensdf_types.h
libakk/: Akk.cpp  Akk.h  akk_global.h
source/: CMakeLists.txt  DecayCascadeFilterProxyModel.cpp  DecayCascadeItemModel.cpp  DecayCascadeItemModel.h  ENSDFDataSource.cpp  ENSDFDataSource.h  ENSDFTreeItem.cpp  ENSDFTreeItem.h  LineEdit.cpp  Nuclei.cpp  Nuclei.h  Nuclei.ui  PreferencesDialog.ui  ScrollZoomView.cpp  ScrollZoomView.h  TreeView.h  custom_logger.cpp  custom_logger.h  main.cpp  qpx_util.h
source/NucData/: CMakeLists.txt  DataQuality.cpp  DataQuality.h  DecayInfo.cpp  DecayInfo.h  DecayMode.cpp  DecayMode.h  DecayScheme.cpp  DecayScheme.h  Energy.cpp  Energy.h  HalfLife.cpp  HalfLife.h  Level.cpp  Level.h  Moment.cpp  Moment.h  Nuclide.cpp  Nuclide.h  Parity.cpp  Parity.h  ReactionInfo.cpp  ReactionInfo.h  Spin.cpp  Spin.h  SpinParity.cpp  SpinParity.h  Transition.cpp  Transition.h  Uncert.cpp  Uncert.h  UncertainDouble.cpp  UncertainDouble.h  nid.cpp  nid.h
source/SchemeEditor/: ActiveGraphicsItemGroup.cpp  ActiveGraphicsItemGroup.h  CMakeLists.txt  ClickableItem.cpp  ClickableItem.h  GraphicsDropShadowEffect.cpp  GraphicsHighlightItem.cpp  GraphicsScene.cpp  LevelItem.cpp  LevelItem.h  NuclideItem.cpp  NuclideItem.h  SchemeEditor.cpp  SchemeEditor.h  SchemeEditor.ui  SchemeEditorPrefs.cpp  SchemeEditorPrefs.h  SchemeEditorPrefs.ui  SchemeGraphics.cpp  SchemeGraphics.h  SchemeVisualSettings.cpp  SchemeVisualSettings.h  TransitionItem.cpp  TransitionItem.h
source/SchemePlayer/: ActiveGraphicsItemGroup.cpp  ActiveGraphicsItemGroup.h  ClickableItem.cpp  ClickableItem.h  GraphicsDropShadowEffect.h  GraphicsHighlightItem.cpp  GraphicsHighlightItem.h  GraphicsScene.h  LevelItem.cpp  LevelItem.h  NuclideItem.cpp  NuclideItem.h  SchemePlayer.cpp  SchemePlayer.h  TransitionItem.cpp  TransitionItem.h
source/ensdf/: AdoptedLevels.cpp  AdoptedLevels.h  CMakeLists.txt  DecayData.cpp  DecayData.h  ENSDFParser.h  Fields.cpp  Fields.h  LevelsData.cpp  LevelsData.h  NuclideData.cpp  NuclideData.h  Parser.cpp  Parser.h  Record.cpp  Record.h  Translator.cpp  Translator.h  alpha_record.cpp  alpha_record.h  beta_record.cpp  beta_record.h  comment_record.cpp  comment_record.h  ec_record.cpp  ec_record.h  ensdf_basic_decay.cpp  ensdf_basic_decay.h  ensdf_parser.cpp  ensdf_parser.h  ensdf_reaction_data.cpp  ensdf_reaction_data.h  ensdf_records.cpp  ensdf_records.h  ensdf_types.cpp  ensdf_types.h  gamma_record.cpp  gamma_record.h  history_record.cpp  history_record.h  (+18 more)
source/ensdf/records/: Alpha.cpp  Alpha.h  Beta.cpp  Beta.h  CMakeLists.txt  Comments.cpp  Comments.h  Continuation.cpp  Continuation.h  EC.cpp  EC.h  Gamma.cpp  Gamma.h  Header.cpp  Header.h  History.cpp  History.h  LevelRec.cpp  LevelRec.h  Normalization.cpp  Normalization.h  Parent.cpp  Parent.h  Particle.cpp  Particle.h  ProductionNorm.cpp  ProductionNorm.h  QValue.cpp  QValue.h  Reference.cpp  Reference.h  XRef.cpp  XRef.h  alpha_record.cpp  alpha_record.h  beta_record.cpp  beta_record.h  comment_record.cpp  comment_record.h  ec_record.cpp  (+20 more)
source/util/: CMakeLists.txt  UTF_extensions.h  ascii_tree.h  bin_hex_print.h  color_bash.h  compare.h  double_consts.h  json_file.h  lexical_extensions.h  logger.cpp  logger.h  print_exception.h  string_extensions.h  time_extensions.cpp  time_extensions.h
